HYDRAN-195: Added new attribute for organization number in db entity
- Added new attribute for organization number in db entity
- Refactored all resources regarding sender-info into one that uses
request parameters instead of path parameters
- Replaced JPA methods with specification builder to support needed
requirements
- Renamed and removed obsolete IT-tests
