# src/integration-test/resources/openapi.yml
@@ -1,183 +1,37 @@
 openapi: 3.0.1
 info:
   title: api-service-messaging-settings
-  contact: { }
+  contact: {}
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
   version: "1.1"
 servers:
-  - url: http://localhost:50897
-    description: Generated server url
+- url: http://localhost:8080
+  description: Generated server url
 paths:
-  /{municipalityId}/{namespace}/{departmentName}/sender-info:
-    get:
-      tags:
-        - Messaging Settings
-      operationId: getSenderInfoByNamespaceAndDepartmentName
-      parameters:
-        - name: municipalityId
-          in: path
-          description: Municipality ID
-          required: true
-          schema:
-            type: string
-          example: 2281
-        - name: namespace
-          in: path
-          description: Namespace
-          required: true
-          schema:
-            type: string
-          example: SKM
-        - name: departmentName
-          in: path
-          description: Department name
-          required: true
-          schema:
-            type: string
-          example: Sundsvalls kommun
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            application/problem+json:
-              schema:
-                oneOf:
-                  - $ref: "#/components/schemas/Problem"
-                  - $ref: "#/components/schemas/ConstraintViolationProblem"
-        "500":
-          description: Internal Server Error
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-  /{municipalityId}/{namespace}/sender-infos:
-    get:
-      tags:
-        - Messaging Settings
-      summary: Get sender info
-      description: Get sender information for a given municipality and namespace.
-      operationId: getSenderInfoByNamespace
-      parameters:
-        - name: municipalityId
-          in: path
-          description: Municipality ID
-          required: true
-          schema:
-            type: string
-          example: 2281
-        - name: namespace
-          in: path
-          description: Namespace
-          required: true
-          schema:
-            type: string
-          example: SKM
-      responses:
-        "400":
-          description: Bad Request
-          content:
-            application/problem+json:
-              schema:
-                oneOf:
-                  - $ref: "#/components/schemas/Problem"
-                  - $ref: "#/components/schemas/ConstraintViolationProblem"
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/SenderInfoResponse"
-        "500":
-          description: Internal Server Error
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/SenderInfoResponse"
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/SenderInfoResponse"
-  /{municipalityId}/{departmentId}/sender-info:
-    get:
-      tags:
-        - Messaging Settings
-      summary: Get sender info
-      description: Get sender info for given department and municipality.
-      operationId: getSenderInfo
-      parameters:
-        - name: municipalityId
-          in: path
-          description: Municipality ID
-          required: true
-          schema:
-            type: string
-          example: 2281
-        - name: departmentId
-          in: path
-          description: Department ID
-          required: true
-          schema:
-            type: string
-          example: SKM
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/SenderInfoResponse"
-        "404":
-          description: Not Found
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
-        "400":
-          description: Bad Request
-          content:
-            application/problem+json:
-              schema:
-                oneOf:
-                  - $ref: "#/components/schemas/Problem"
-                  - $ref: "#/components/schemas/ConstraintViolationProblem"
-        "500":
-          description: Internal Server Error
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/Problem"
   /{municipalityId}/{departmentId}/callback-email:
     get:
       tags:
-        - Messaging Settings
+      - Messaging Settings
       summary: Get callback email
       description: Get callback e-mail for given department and municipality.
       operationId: getCallbackEmail
       parameters:
-        - name: municipalityId
-          in: path
-          description: Municipality ID
-          required: true
-          schema:
-            type: string
-          example: 2281
-        - name: departmentId
-          in: path
-          description: Department ID
-          required: true
-          schema:
-            type: string
-          example: SKM
+      - name: municipalityId
+        in: path
+        description: Municipality ID
+        required: true
+        schema:
+          type: string
+        example: 2281
+      - name: departmentId
+        in: path
+        description: Department ID
+        required: true
+        schema:
+          type: string
+        example: SKM
       responses:
         "200":
           description: OK
@@ -197,8 +51,74 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                  - $ref: "#/components/schemas/Problem"
-                  - $ref: "#/components/schemas/ConstraintViolationProblem"
+                - $ref: "#/components/schemas/Problem"
+                - $ref: "#/components/schemas/ConstraintViolationProblem"
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+  /{municipalityId}/sender-info:
+    get:
+      tags:
+      - Messaging Settings
+      summary: Get sender info
+      description: "Get sender info, optionally filtered by any combination of department\
+        \ id, department name and namespace."
+      operationId: getSenderInfo
+      parameters:
+      - name: municipalityId
+        in: path
+        description: Municipality ID
+        required: true
+        schema:
+          type: string
+        example: 2281
+      - name: departmentId
+        in: query
+        description: Department ID
+        required: false
+        schema:
+          type: string
+        example: 28
+      - name: departmentName
+        in: query
+        description: Department name
+        required: false
+        schema:
+          type: string
+        example: Sundsvalls kommun
+      - name: namespace
+        in: query
+        description: Namespace
+        required: false
+        schema:
+          type: string
+        example: Namespace 1
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/SenderInfoResponse"
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "400":
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                - $ref: "#/components/schemas/Problem"
+                - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server Error
           content:
@@ -208,18 +128,18 @@ paths:
   /{municipalityId}/portal-settings:
     get:
       tags:
-        - Messaging Settings
+      - Messaging Settings
       summary: Get portal settings
       description: Get portal settings for given department.
       operationId: getPortalSettings
       parameters:
-        - name: municipalityId
-          in: path
-          description: Municipality ID
-          required: true
-          schema:
-            type: string
-          example: 2281
+      - name: municipalityId
+        in: path
+        description: Municipality ID
+        required: true
+        schema:
+          type: string
+        example: 2281
       responses:
         "200":
           description: OK
@@ -239,8 +159,8 @@ paths:
             application/problem+json:
               schema:
                 oneOf:
-                  - $ref: "#/components/schemas/Problem"
-                  - $ref: "#/components/schemas/ConstraintViolationProblem"
+                - $ref: "#/components/schemas/Problem"
+                - $ref: "#/components/schemas/ConstraintViolationProblem"
         "500":
           description: Internal Server Error
           content:
@@ -250,7 +170,7 @@ paths:
   /api-docs:
     get:
       tags:
-        - API
+      - API
       summary: OpenAPI
       operationId: getApiDocs
       responses:
@@ -459,6 +379,14 @@ components:
           type: string
         message:
           type: string
+    CallbackEmailResponse:
+      type: object
+      properties:
+        callbackEmail:
+          type: string
+          description: Callback e-mail address
+          example: no-reply@domain.tld
+      description: CallbackEmail response
     SenderInfoResponse:
       type: object
       properties:
@@ -487,14 +415,6 @@ components:
           description: Name of SMS sender
           example: Sundsvall
       description: SenderInfo response
-    CallbackEmailResponse:
-      type: object
-      properties:
-        callbackEmail:
-          type: string
-          description: Callback e-mail address
-          example: no-reply@domain.tld
-      description: CallbackEmail response
     PortalSettingsResponse:
       type: object
       properties:
@@ -511,9 +431,9 @@ components:
           description: Method of delivery
           example: EMAIL
           enum:
-            - EMAIL
-            - SC_ADMIN
-            - SC_ADMIN
-            - EMAIL
+          - EMAIL
+          - SC_ADMIN
+          - SC_ADMIN
+          - EMAIL
       description: PortalSettings response
-  securitySchemes: { }
+  securitySchemes: {}
